# art-admin/app/static/swagger/nft/nft.swagger.json
@@ -50,26 +50,6 @@
       }
     },
     "/api/nft/burn": {
-      "get": {
-        "operationId": "GetAllBurned",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/nftBurnList"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "tags": [
-          "Nft"
-        ]
-      },
       "post": {
         "operationId": "Burn",
         "responses": {
@@ -102,14 +82,15 @@
         ]
       }
     },
-    "/api/nft/burn/error": {
-      "get": {
-        "operationId": "GetAllBurnedError",
+    "/api/nft/burn/track": {
+      "post": {
+        "operationId": "SetTrackNumber",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/nftBurnList"
+              "type": "object",
+              "properties": {}
             }
           },
           "default": {
@@ -119,28 +100,16 @@
             }
           }
         },
-        "tags": [
-          "Nft"
-        ]
-      }
-    },
-    "/api/nft/burn/pending": {
-      "get": {
-        "operationId": "GetAllBurnedPending",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
             "schema": {
-              "$ref": "#/definitions/nftBurnList"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
+              "$ref": "#/definitions/nftSetTrackingNumberRequest"
             }
           }
-        },
+        ],
         "tags": [
           "Nft"
         ]
@@ -238,7 +207,7 @@
         ]
       },
       "post": {
-        "summary": "Method used in ui for submitting drawing nft reference",
+        "summary": "Method used in ui for submitting drawing nft reference use id 0 for new nft and current nft id for update",
         "operationId": "UpsertNFTMintRequest",
         "responses": {
           "200": {
@@ -301,39 +270,6 @@
         ]
       }
     },
-    "/api/nft/shipping/status": {
-      "post": {
-        "operationId": "UpdateBurnShippingStatus",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "type": "object",
-              "properties": {}
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/nftShippingStatusUpdateRequest"
-            }
-          }
-        ],
-        "tags": [
-          "Nft"
-        ]
-      }
-    },
     "/api/nft/{id}": {
       "delete": {
         "summary": "Remove nft offchain url from mint request",
@@ -368,17 +304,6 @@
     }
   },
   "definitions": {
-    "nftBurnList": {
-      "type": "object",
-      "properties": {
-        "data": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/nftBurnShippingInfo"
-          }
-        }
-      }
-    },
     "nftBurnRequest": {
       "type": "object",
       "properties": {
@@ -397,21 +322,6 @@
         }
       },
       "title": "Burn"
-    },
-    "nftBurnShippingInfo": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "burn": {
-          "$ref": "#/definitions/nftBurnRequest"
-        },
-        "status": {
-          "$ref": "#/definitions/nftShippingStatus"
-        }
-      }
     },
     "nftDeleteStatus": {
       "type": "object",
@@ -461,8 +371,7 @@
       "type": "object",
       "properties": {
         "id": {
-          "type": "integer",
-          "format": "int32",
+          "type": "string",
           "title": "internal id in db"
         },
         "ethAddress": {
@@ -536,38 +445,39 @@
         "nftOffchainUrl": {
           "type": "string",
           "title": "resulted nft url uploaded offchain i.e to s3 can be empty"
+        },
+        "shipping": {
+          "$ref": "#/definitions/nftShipping",
+          "title": "related only if status is burned or shipped"
         }
       },
-      "title": "NFT request as is with status \nlist of statuses \nStatusUnknown          NFTStatus = \"unknown\"\nStatusPending          NFTStatus = \"pending\"\nStatusCompleted        NFTStatus = \"completed\"\nStatusFailed           NFTStatus = \"failed\"\nStatusBad              NFTStatus = \"bad\"\nStatusUploadedOffchain NFTStatus = \"uploadedOffchain\"\nStatusUploaded         NFTStatus = \"uploaded”"
+      "title": "NFT request as is with status \nlist of statuses \nStatusUnknown          NFTStatus = \"unknown\"\nStatusPending          NFTStatus = \"pending\"\nStatusFailed           NFTStatus = \"failed\"\nStatusUploadedOffchain NFTStatus = \"offchain\"\nStatusUploaded         NFTStatus = \"uploaded\"\nStatusBurned           NFTStatus = \"burned\"\nStatusShipped          NFTStatus = \"shipped\""
     },
-    "nftShippingStatus": {
-      "type": "object",
-      "properties": {
-        "trackNumber": {
-          "type": "string"
-        },
-        "timeSent": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "error": {
-          "type": "string"
-        },
-        "success": {
-          "type": "boolean"
-        }
-      }
-    },
-    "nftShippingStatusUpdateRequest": {
+    "nftSetTrackingNumberRequest": {
       "type": "object",
       "properties": {
         "id": {
-          "type": "string"
+          "type": "string",
+          "title": "internai id"
         },
-        "status": {
-          "$ref": "#/definitions/nftShippingStatus"
+        "trackingNumber": {
+          "type": "string",
+          "title": "resulted nft raw image b64 encoded"
         }
-      }
+      },
+      "title": "SetTrackingNumberRequest update tracking number for shipping"
+    },
+    "nftShipping": {
+      "type": "object",
+      "properties": {
+        "shipping": {
+          "$ref": "#/definitions/nftShippingTo"
+        },
+        "trackingNumber": {
+          "type": "string"
+        }
+      },
+      "title": "Shipping info"
     },
     "nftShippingTo": {
       "type": "object",
@@ -590,7 +500,8 @@
         "email": {
           "type": "string"
         }
-      }
+      },
+      "title": "ShippingTo shipping info"
     },
     "nftUpdateNFTOffchainUrlRequest": {
       "type": "object",
